--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
 
-# Created by https://www.gitignore.io/api/xcode,swift,macos
-# Edit at https://www.gitignore.io/?templates=xcode,swift,macos
+# Created by https://www.gitignore.io/api/xcode,swift,macos,carthage
+# Edit at https://www.gitignore.io/?templates=xcode,swift,macos,carthage
+
+### Carthage ###
+# Carthage
+#
+# Add this line if you want to avoid checking in source code from Carthage dependencies.
+# Carthage/Checkouts
+
+Carthage/Build
 
 ### macOS ###
 # General
@@ -32,7 +40,6 @@ Temporary Items
 
 ### Swift ###
 # Xcode
-#
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
 ## Build generated
@@ -84,7 +91,6 @@ playground.xcworkspace
 # Add this line if you want to avoid checking in source code from Carthage dependencies.
 # Carthage/Checkouts
 
-Carthage/Build
 
 # Accio dependency management
 Dependencies/
@@ -127,4 +133,4 @@ iOSInjectionProject/
 ### Xcode Patch ###
 **/xcshareddata/WorkspaceSettings.xcsettings
 
-# End of https://www.gitignore.io/api/xcode,swift,macos
+# End of https://www.gitignore.io/api/xcode,swift,macos,carthage
