— Updated gitignore to exclude .xcscheme extensions because I am setting private environment variables there and do not want it in source control

--- a/.gitignore
+++ b/.gitignore
@@ -133,5 +133,6 @@ iOSInjectionProject/
 
 ### Xcode Patch ###
 **/xcshareddata/WorkspaceSettings.xcsettings
+**/xcshareddata/xcschemes/*.xcscheme
 
 # End of https://www.gitignore.io/api/xcode,swift,macos,carthage
