— Updated .gitignore to ignore Env.plist as this should be private

--- a/.gitignore
+++ b/.gitignore
@@ -134,5 +134,6 @@ iOSInjectionProject/
 ### Xcode Patch ###
 **/xcshareddata/WorkspaceSettings.xcsettings
 **/xcshareddata/xcschemes/*.xcscheme
+Env.plist
 
 # End of https://www.gitignore.io/api/xcode,swift,macos,carthage
